<resources>
    <string name="app_name">MovieApp</string>
    <string name="back">Back</string>
    <string name="pg_age">13+</string>
    <string name="movie_name">Avengers:\nEnd Game</string>
    <string name="tags">Action, Adventure, Fantasy</string>
    <string name="reviews">125 REVIEWS</string>
    <string name="storyline">Storyline</string>
    <string name="description">After the devastating events of Avengers: Infinity War, the universe is in ruins. With the help of remaining allies, the Avengers assemble once more in order to reverse Thanos\' actions and restore balance to the universe.</string>
    <string name="cast">Cast</string>
    <string name="actor1">Robert\nDowney Jr.</string>
    <string name="actor2">Chris\nEvans</string>
    <string name="actor3">Mark\nRuffalo</string>
    <string name="actor4">Chris\nHemsworth</string>
    <string name="dummy_button">Dummy Button</string>
    <string name="dummy_content">DUMMY\nCONTENT</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="list_movie_name">Avengers: End Game</string>
    <string name="movie_length">137 MIN</string>
</resources>