<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/background"
    android:theme="@style/Theme.MovieApp">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        tools:context=".ui.activities.MainActivity">

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/leading_guide"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            app:layout_constraintGuide_begin="16dp" />

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/trailing_guide"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            app:layout_constraintGuide_end="16dp" />

        <ImageView
            android:id="@+id/iv_movie_details_cover"
            android:layout_width="match_parent"
            android:layout_height="298dp"
            android:scaleType="centerCrop"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:srcCompat="@drawable/avengers_cover" />

        <ImageView
            android:id="@+id/iv_movie_details_cover_mask"
            android:layout_width="match_parent"
            android:layout_height="298dp"
            android:scaleType="centerCrop"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:srcCompat="@drawable/img_cover_mask" />

        <TextView
            android:id="@+id/tv_movie_details_back_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="59dp"
            android:alpha="0.5"
            android:drawablePadding="8dp"
            android:fontFamily="@font/roboto"
            android:gravity="center_vertical"
            android:lineSpacingExtra="2sp"
            android:text="@string/back"
            android:textColor="@color/white"
            android:textSize="12sp"
            app:drawableStartCompat="@drawable/ic_back"
            app:layout_constraintStart_toEndOf="@id/leading_guide"
            app:layout_constraintTop_toTopOf="parent"
            tools:text="Back" />

        <include
            android:id="@+id/pg_rating"
            layout="@layout/pg_rating"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="222dp"
            app:layout_constraintStart_toEndOf="@id/leading_guide"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/tv_movie_details_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="12dp"
            android:fontFamily="@font/roboto"
            android:gravity="center_vertical"
            android:text="@string/movie_name"
            android:textColor="#ECECEC"
            android:textFontWeight="900"
            android:textSize="40sp"
            app:layout_constraintStart_toEndOf="@id/leading_guide"
            app:layout_constraintTop_toBottomOf="@id/pg_rating"
            tools:text="Avengers:\nEnd Game" />

        <TextView
            android:id="@+id/tv_movie_details_genre"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="4dp"
            android:fontFamily="@font/roboto"
            android:gravity="center_vertical"
            android:text="@string/tags"
            android:textColor="@color/accent"
            android:textFontWeight="300"
            android:textSize="14sp"
            app:layout_constraintStart_toEndOf="@id/leading_guide"
            app:layout_constraintTop_toBottomOf="@id/tv_movie_details_title"
            tools:text="Action, Adventure, Fantasy" />

        <include
            android:id="@+id/reviews_bar"
            layout="@layout/reviews_bar"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="4dp"
            app:layout_constraintStart_toEndOf="@id/leading_guide"
            app:layout_constraintTop_toBottomOf="@id/tv_movie_details_genre"
            tools:text="125 REWIEWS" />

        <TextView
            android:id="@+id/tv_movie_details_storyline_title"
            android:layout_width="wrap_content"
            android:layout_height="20dp"
            android:layout_marginTop="24dp"
            android:fontFamily="@font/roboto"
            android:gravity="center_vertical"
            android:text="@string/storyline"
            android:textColor="#ECECEC"
            android:textFontWeight="900"
            android:textSize="14sp"
            app:layout_constraintStart_toEndOf="@id/leading_guide"
            app:layout_constraintTop_toBottomOf="@id/reviews_bar"
            tools:text="Storyline" />

        <TextView
            android:id="@+id/tv_movie_details_storyline_description"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:alpha="0.75"
            android:fontFamily="@font/roboto"
            android:gravity="center_vertical"
            android:lineSpacingExtra="4sp"
            android:paddingVertical="12dp"
            android:text="@string/description"
            android:textColor="@color/white"
            android:textFontWeight="300"
            android:textSize="14sp"
            app:layout_constraintStart_toEndOf="@id/leading_guide"
            app:layout_constraintTop_toBottomOf="@id/tv_movie_details_storyline_title"
            tools:text="After the devastating events of Avengers: Infinity War, the universe is in ruins. With the help of remaining allies, the Avengers assemble once more in order to reverse Thanos' actions and restore balance to the universe." />

        <TextView
            android:id="@+id/tv_movie_details_cast_title"
            android:layout_width="wrap_content"
            android:layout_height="20dp"
            android:layout_marginTop="24dp"
            android:fontFamily="@font/roboto"
            android:gravity="center_vertical"
            android:text="@string/cast"
            android:textColor="#ECECEC"
            android:textFontWeight="900"
            android:textSize="14sp"
            app:layout_constraintStart_toEndOf="@id/leading_guide"
            app:layout_constraintTop_toBottomOf="@id/tv_movie_details_storyline_description"
            tools:text="Cast" />

        <HorizontalScrollView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fillViewport="true"
            app:layout_constraintStart_toEndOf="@id/leading_guide"
            app:layout_constraintTop_toBottomOf="@id/tv_movie_details_cast_title">

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:layout_marginBottom="8dp"
                android:orientation="horizontal">

                <include
                    layout="@layout/card_actor"
                    app:srcCompat="@drawable/robert_downey_jr" />

                <include
                    layout="@layout/card_actor"
                    app:srcCompat="@drawable/robert_downey_jr" />

                <include
                    layout="@layout/card_actor"
                    app:srcCompat="@drawable/robert_downey_jr" />

                <include
                    layout="@layout/card_actor"
                    app:srcCompat="@drawable/robert_downey_jr" />

                <include
                    layout="@layout/card_actor"
                    app:srcCompat="@drawable/robert_downey_jr" />

                <include
                    layout="@layout/card_actor"
                    app:srcCompat="@drawable/robert_downey_jr" />
            </LinearLayout>
        </HorizontalScrollView>

    </androidx.constraintlayout.widget.ConstraintLayout>
</ScrollView>