<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    app:cardCornerRadius="8dp"
    app:cardElevation="2dp"
    app:cardPreventCornerOverlap="false"
    app:cardUseCompatPadding="true">

    <RelativeLayout
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:background="@drawable/movie_item_background"
        android:orientation="vertical">

        <com.google.android.material.imageview.ShapeableImageView
            android:id="@+id/iv_movie_list_cover"
            android:layout_width="wrap_content"
            android:layout_height="248dp"
            android:layout_marginTop="2dp"
            android:layout_marginHorizontal="2dp"
            android:scaleType="centerCrop"
            app:shapeAppearanceOverlay="@style/roundedImageView"
            app:srcCompat="@drawable/avengers_cover_small" />

        <ImageView
            android:id="@+id/iv_movie_list_mask"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignBottom="@id/iv_movie_list_cover"
            android:layout_alignParentEnd="true"
            android:layout_alignParentStart="true"
            android:scaleType="centerCrop"
            app:srcCompat="@drawable/movie_cover_shadow" />

        <include
            android:id="@+id/pg_rating"
            layout="@layout/pg_rating"
            android:layout_width="24dp"
            android:layout_height="24dp"
            android:layout_marginStart="8dp"
            android:layout_marginTop="8dp" />

        <ImageView
            android:id="@+id/iv_movie_list_like"
            android:layout_width="16dp"
            android:layout_height="14dp"
            android:layout_alignParentEnd="true"
            android:layout_marginTop="13dp"
            android:layout_marginEnd="8dp"
            app:srcCompat="@drawable/ic_like" />

        <TextView
            android:id="@+id/tv_movie_list_genre"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignTop="@id/iv_movie_list_cover"
            android:layout_marginStart="8dp"
            android:layout_marginTop="208dp"
            android:fontFamily="@font/roboto"
            android:gravity="center_vertical"
            android:text="@string/tags"
            android:textColor="@color/accent"
            android:textFontWeight="600"
            android:textSize="12sp"
            tools:text="Action, Adventure, Fantasy" />

        <me.zhanghai.android.materialratingbar.MaterialRatingBar
            android:id="@id/reviews_bar"
            style="@style/CustomRatingBar"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/tv_movie_list_genre"
            android:layout_marginStart="8dp"
            android:layout_marginTop="2dp"
            android:isIndicator="true"
            android:maxHeight="16dp"
            android:minHeight="16dp"
            android:rating="4"
            android:stepSize="1" />

        <TextView
            android:id="@+id/tv_movie_list_reviews"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/tv_movie_list_genre"
            android:layout_alignBaseline="@id/reviews_bar"
            android:layout_marginStart="8dp"
            android:layout_marginTop="2dp"
            android:layout_toEndOf="@+id/reviews_bar"
            android:fontFamily="@font/roboto"
            android:gravity="center_horizontal|center_vertical"
            android:text="@string/reviews"
            android:textColor="@color/text_secondary"
            android:textFontWeight="600"
            android:textSize="12sp"
            tools:text="125 REVIEWS" />

        <TextView
            android:id="@+id/tv_movie_list_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/iv_movie_list_cover"
            android:layout_alignParentStart="true"
            android:layout_alignParentEnd="true"
            android:layout_marginStart="8dp"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="8dp"
            android:fontFamily="@font/roboto"
            android:gravity="center_vertical"
            android:lineHeight="20sp"
            android:text="@string/list_movie_name"
            android:textColor="#ECECEC"
            android:textFontWeight="900"
            android:textSize="18sp"
            tools:text="Avengers: Endgame" />

        <TextView
            android:id="@+id/tv_movie_list_duration"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/tv_movie_list_title"
            android:layout_marginStart="8dp"
            android:layout_marginTop="0dp"
            android:layout_marginBottom="8dp"
            android:fontFamily="@font/roboto"
            android:gravity="center_vertical"
            android:text="@string/movie_length"
            android:textColor="#565665"
            android:textFontWeight="600"
            android:textSize="12sp"
            tools:text="137 MIN" />
    </RelativeLayout>

</androidx.cardview.widget.CardView>